force-app/main/default/objects/result__c/result__c.object-meta.xml
<CustomObject>
    <label>Result</label>
    <nameField>
        <label>season Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>