force-app/main/default/objects/result__c/fields/Constructor__c.field-meta.xml
<CustomField>
    <fullName>Constructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constructor</label>
    <referenceTo>constructor__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>