force-app/main/default/objects/result__c/fields/laps__c.field-meta.xml
<CustomField>
    <fullName>laps__c</fullName>
    <label>Laps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>