force-app/main/default/objects/result__c/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <label>number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>