force-app/main/default/objects/result__c/fields/positionText__c.field-meta.xml
<CustomField>
    <fullName>positionText__c</fullName>
    <label>Position Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>