force-app/main/default/objects/result__c/fields/race__c.field-meta.xml
<CustomField>
    <fullName>race__c</fullName>
    <label>Race</label>
    <referenceTo>race__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>