force-app/main/default/objects/result__c/fields/result_id__c.field-meta.xml
<CustomField>
    <fullName>result_id__c</fullName>
    <externalId>true</externalId>
    <label>result_id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>