force-app/main/default/objects/result__c/fields/ResultKey__c.field-meta.xml
<CustomField>
    <fullName>ResultKey__c</fullName>
    <externalId>true</externalId>
    <label>Result Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>